--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -16,6 +16,11 @@ jobs:
         with:
           go-version: 1.17
 
+      - name: Install Node 14
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14.x
+
       - name: Checkout Repo
         uses: actions/checkout@v2
 
