--- a/doctor.config.yml
+++ b/doctor.config.yml
@@ -27,16 +27,16 @@ checks:
 
 commands:
   - name: Compile executable
-    command: [make, make build]
+    run: [make, make build]
 
   - name: Run against the repo's doctor.config.yml
-    command: make run
+    run: make run
 
   - name: Same as run, but print all debug logs
-    command: make debug
+    run: make debug
 
   - name: Run against a specific config
-    command: go run main.go -c examples/node.yml
+    run: go run main.go -c examples/node.yml
 
   - name: Cleanup the application's dependencies
-    command: go mod tidy
+    run: go mod tidy
